--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "bmc-factory",
+  "name": "bmc",
   "version": "1.0.0",
   "description": "Business Model Canvas Web",
-  "main": "src/index.js",
+  "main": "src/index.html",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fully-full-stack/bmc-factory.git"
+    "url": "git+https://github.com/nidorx/bmc.git"
   },
   "keywords": [
     "bmc",
@@ -21,24 +20,14 @@
   "author": "Alex Rodin <contato@alexrodin.info>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fully-full-stack/bmc-factory/issues"
+    "url": "https://github.com/nidorx/bmc/issues"
   },
-  "homepage": "https://github.com/fully-full-stack/bmc-factory#readme",
+  "homepage": "https://github.com/nidorx/bmc#readme",
   "dependencies": {
-    "zepto": "1.2.0",
-    "dragsort": "1.0.6"
+    "dragsort": "1.0.6",
+    "zepto": "1.2.0"
   },
   "devDependencies": {
-    "webpack": "4.42.0",
-    "webpack-cli": "3.3.11",
-    "webpack-merge": "4.2.2",
-    "css-loader": "3.4.2",
-    "imports-loader": "0.8.0",
-    "webpack-dev-server": "3.10.3",
-    "html-webpack-plugin": "3.2.0",
-    "clean-webpack-plugin": "3.0.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "optimize-css-assets-webpack-plugin": "5.0.3"
+    "html-minifier": "^4.0.0"
   }
 }
